[package]
name = "bytis"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "1.0.20"
git2 = "0.18.1"
conventional-commit = "0.1.0"
clap = { version = "4.4.6", features = ["derive"] }
openssl = { version = "0.10.57", features = ["vendored"] }